@@ -1,5 +1,5 @@
 /****************************************************************************
- * net/net_router.c
+ * net/netdev_router.c
  *
  *   Copyright (C) 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
@@ -43,6 +43,8 @@
 #include <string.h>
 #include <errno.h>
 
+#include <nuttx/net/uip/uip-arch.h>
+
 #include "net_internal.h"
 #include "net_route.h"
 
@@ -52,8 +54,9 @@
  * Public Types
  ****************************************************************************/
 
-struct route_match_s
+struct route_devmatch_s
 {
+  FAR struct uip_driver_s *dev; /* The route must use this device */
   uip_ipaddr_t target;   /* The target IP address on an external network to match */
   uip_ipaddr_t router;   /* The IP address of the router on one of our networks*/
 };
@@ -63,10 +66,10 @@ struct route_match_s
  ****************************************************************************/
 
 /****************************************************************************
- * Function: net_match
+ * Function: net_devmatch
  *
  * Description:
- *   Return 1 if the route is available
+ *   Return 1 if the route is available on the device's network.
  *
  * Parameters:
  *   route - The next route to examine
@@ -77,16 +80,20 @@ struct route_match_s
  *
  ****************************************************************************/
 
-static int net_match(FAR struct net_route_s *route, FAR void *arg)
+static int net_devmatch(FAR struct net_route_s *route, FAR void *arg)
 {
-  FAR struct route_match_s *match = (FAR struct route_match_s *)arg;
+  FAR struct route_devmatch_s *match = (FAR struct route_devmatch_s *)arg;
+  FAR struct uip_driver_s *dev = match->dev;
 
-  /* To match, the masked target addresses must be the same.  In the event
-   * of multiple matches, only the first is returned.  There not (yet) any
-   * concept for the precedence of networks.
+  /* To match, (1) the masked target addresses must be the same, and (2) the
+   * router address must like on the network provided by the device.
+   *
+   * In the event of multiple matches, only the first is returned.  There
+   * not (yet) any concept for the precedence of networks.
    */
 
-  if (uip_ipaddr_maskcmp(route->target, match->target, route->netmask))
+  if (uip_ipaddr_maskcmp(route->target, match->target, route->netmask) &&
+      uip_ipaddr_maskcmp(route->router, dev->d_ipaddr, dev->d_netmask))
     {
       /* They match.. Copy the router address */
 
@@ -102,13 +109,16 @@ static int net_match(FAR struct net_route_s *route, FAR void *arg)
  ****************************************************************************/
 
 /****************************************************************************
- * Function: net_router
+ * Function: netdev_router
  *
  * Description:
  *   Given an IP address on a external network, return the address of the
  *   router on a local network that can forward to the external network.
+ *   This is similar to net_router().  However, the set of routers is
+ *   constrained to those accessible by the specific device
  *
  * Parameters:
+ *   dev    - We are committed to using this device.
  *   target - An IP address on a remote network to use in the lookup.
  *   router - The address of router on a local network that can forward our
  *     packets to the target.
@@ -117,29 +127,30 @@ static int net_match(FAR struct net_route_s *route, FAR void *arg)
  *   value.  Hence, the change in the function signature.
  *
  * Returned Value:
- *   OK on success; Negated errno on failure.
+ *   None
  *
  ****************************************************************************/
 
 #ifdef CONFIG_NET_IPv6
-int net_router(uip_ipaddr_t target, uip_ipaddr_t router)
+void netdev_router(FAR struct uip_driver_s *dev, uip_ipaddr_t target,
+                   uip_ipaddr_t router)
 #else
-int net_router(uip_ipaddr_t target, FAR uip_ipaddr_t *router)
+void netdev_router(FAR struct uip_driver_s *dev, uip_ipaddr_t target,
+                   FAR uip_ipaddr_t *router)
 #endif
 {
-  struct route_match_s match;
+  struct route_devmatch_s match;
   int ret;
 
   /* Set up the comparison structure */
 
-  memset(&match, 0, sizeof(struct route_match_s));
+  memset(&match, 0, sizeof(struct route_devmatch_s));
+  match.dev = dev;
   uip_ipaddr_copy(match.target, target);
 
-  /* Find an router entry with the routing table that can forward to this
-   * address
-   */
+  /* Then remove the entry from the routing table */
 
-  ret = net_foreachroute(net_match, &match);
+  ret = net_foreachroute(net_devmatch, &match);
   if (ret > 0)
     {
       /* We found a route.  Return the router address. */
@@ -153,12 +164,16 @@ int net_router(uip_ipaddr_t target, FAR uip_ipaddr_t *router)
     }
   else
     {
-      /* There is no route for this address */
+      /* There isn't a matching route.. fallback and use the default router
+       * of the device.
+       */
 
-      ret = -ENOENT;
+#ifdef CONFIG_NET_IPv6
+      uip_ipaddr_copy(router, dev->d_draddr);
+#else
+      uip_ipaddr_copy(*router, dev->d_draddr);
+#endif
     }
-
-  return ret;
 }
 
 #endif /* CONFIG_NET && CONFIG_NET_ROUTE */
